--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
-    "mongoose": "^3.8.8"
+    "mongoose": "^3.8.8",
+    "supertest": "~0.13.0"
   }
 }
